added more refs, in particular on flow algebras etc

--- a/ramics24/ramics24.bib
+++ b/ramics24/ramics24.bib
@@ -134,7 +134,7 @@
                   David Schmidt},
   title        = {Liveness-Based Pointer Analysis},
   booktitle = "SAS 2012",
-  XXXbooktitle    = {Static Analysis - 19th International Symposium, {SAS} 2012, Deauville, France, September 11-13, 2012. Proceedings},
+  XXXbooktitle    = {Static Analysis:19th International Symposium, {SAS} 2012, Deauville, France, September 11--13, 2012, Proceedings},
   series = "LNCS",		  
   XXXseries       = {Lecture Notes in Computer Science},
   volume       = {7460},
@@ -142,8 +142,123 @@
   publisher    = {Springer},
   year         = {2012},
   XXXurl          = {https://doi.org/10.1007/978-3-642-33125-1\_19},
-  doi          = {10.1007/978-3-642-33125-1_19},
+  doi          = {10.1007/978-3-642-33125-1\_19},
   timestamp    = {Sun, 25 Oct 2020 22:47:25 +0100},
   biburl       = {https://dblp.org/rec/conf/sas/KhedkerMR12.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@ARTICLE{EKMS:prigc,
+  author = "Marcel Ern{\'e} and J{\"u}rgen Koslowski and Austin Melton and George E. Strecker",
+  title = "A Primer on {G}alois Connections",
+  journal = "Ann.\ New York Acad.\ Sci.",
+  volume = 704,
+  number = 1,
+  pages = "103--125",
+  year = 1993,
+  doi = "10.1111/j.1749-6632.1993.tb52513.x"
+}
+
+@ARTICLE{Now:protfp,
+  author = "Marek Nowak",
+  title = "A Proof of {T}arski's Fixed Point Theorem by Application of
+      {G}alois Connections",
+  journal = "Studia Logica",
+  volume = 103,
+  number = 2,
+  pages = "287--301",
+  year = 2015,
+  doi = "10.1007/s11225-014-9559-y"
+}
+
+@inproceedings{FTRNN:galcfa,
+  author       = {Piotr Filipiuk and
+                  Michal Terepeta and
+                  Hanne {Riis Nielson} and
+                  Flemming Nielson},
+  editor       = {Roberto Bruni and
+                  J{\"{u}}rgen Dingel},
+  title        = {{G}alois Connections for Flow Algebras},
+  booktitle = "FMOODS/FORTE 2011",
+  XXXbooktitle    = {Formal Techniques for Distributed Systems: Joint 13th {IFIP} {WG}
+                  6.1 International Conference, {FMOODS} 2011, and 31st {IFIP} {WG}
+                  6.1 International Conference, {FORTE} 2011, Reykjavik, Iceland, June
+                  6--9, 2011, Proceedings},
+  series       = "LNCS",		  
+  XXXseries       = {Lecture Notes in Computer Science},
+  volume       = {6722},
+  pages        = {138--152},
+  publisher    = {Springer},
+  year         = {2011},
+  XXXurl          = {https://doi.org/10.1007/978-3-642-21461-5\_9},
+  doi          = {10.1007/978-3-642-21461-5\_9},
+  timestamp    = {Sun, 02 Jun 2019 21:14:32 +0200},
+  biburl       = {https://dblp.org/rec/conf/forte/FilipiukTNN11.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@phdthesis{Ter:algaar,
+  author = "Michal Tomasz Terepeta",
+  title = "An Algebraic Approach to Analysis of Recursive 
+                   and Concurrent Programs",
+  school = "Technical University of Denmark",
+  year = 2013,
+  url = "https://orbit.dtu.dk/files/68434163/phd307\_Terepeta\_M.pdf"
+}
+
+@misc{FK:algfcp,
+  author       = {Azadeh Farzan and
+                  Zachary Kincaid},
+  title        = {An Algebraic Framework for Compositional Program Analysis},
+  howpublished      = {arXiv eprint 1310.3481 [cs.PL]},
+  year         = {2013},
+  doi          = {10.48550/arXiv.1310.3481},
+  eprinttype    = {arXiv},
+  eprint       = {1310.3481},
+  timestamp    = {Mon, 13 Aug 2018 16:49:01 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/FarzanK13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{BCKR:refpes,
+  author       = {John Cyphert and
+                  Jason Breck and
+                  Zachary Kincaid and
+                  Thomas W. Reps},
+  title        = {Refinement of Path Expressions for Static Analysis},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {3},
+  number       = {{POPL}},
+  pages        = {45:1--45:29},
+  year         = {2019},
+  XXXurl          = {https://doi.org/10.1145/3290358},
+  doi          = {10.1145/3290358},
+  timestamp    = {Tue, 21 Mar 2023 21:13:49 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/CyphertBKR19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cav/KincaidRC21,
+  author       = {Zachary Kincaid and
+                  Thomas W. Reps and
+                  John Cyphert},
+  editor       = {Alexandra Silva and
+                  K. Rustan M. Leino},
+  title        = {Algebraic Program Analysis},
+  booktitle = "CAV 2021, Part I",
+  XXXbooktitle    = {Computer Aided Verification: 33rd International Conference, {CAV}
+                  2021, Virtual Event, July 20-23, 2021, Proceedings, Part {I}},
+  series = "LNCS",		  
+  XXXseries       = {Lecture Notes in Computer Science},
+  volume       = {12759},
+  pages        = {46--83},
+  publisher    = {Springer},
+  year         = {2021},
+  XXXurl          = {https://doi.org/10.1007/978-3-030-81685-8\_3},
+  doi          = {10.1007/978-3-030-81685-8\_3},
+  timestamp    = {Tue, 21 Mar 2023 21:00:07 +0100},
+  biburl       = {https://dblp.org/rec/conf/cav/KincaidRC21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
